Windows separation and more term and vanilla separation

--- a/emacs.org
+++ b/emacs.org
@@ -25,12 +25,11 @@ Archives: elpa is default, melpa is community.
 Use-package is macro that is used like a package manager. [[https://github.com/jwiegley/use-package][Use-Package Documentation]]
 #+begin_src emacs-lisp
   ;; Vanilla setup or using packages
-  (setq jmn-vanilla nil)
   (setq jmn-vanilla t)
   (setq jmn-term (not (display-graphic-p (selected-frame))))
 
   (if jmn-vanilla
-      (defmacro use-package (&rest _))
+      (defmacro use-package (&rest _))  ;; define use-package macro to do nothing
     (progn
       (require 'package)
       (setq package-archives '(("melpa" . "https://melpa.org/packages/")
@@ -46,23 +45,13 @@ Use-package is macro that is used like a package manager. [[https://github.com/j
       (require 'use-package)
       (setq use-package-always-ensure t) ; no need for :ensure t for each package.
       (setq use-package-verbose t)) ; log configure/loading messages in *Messages*
-    ) ;; define use-package macro to do nothing
+    )
 
   ;; allows us to make sure environment packages are installed
   (use-package use-package-ensure-system-package
     :ensure t)
 
-  ;; prompt will remind us to update your packages.
-  ;; Alternitiley we can =M-x auto-package-update-now= to update right now.
-  (use-package auto-package-update
-    :custom
-    (auto-package-update-interval 90)
-    (auto-package-update-prompt-before-update t)
-    :config
-    (setq auto-package-update-delete-old-versions t)
-    (setq auto-package-update-hide-results t)
-    (auto-package-update-maybe)
-    (auto-package-update-at-time "09:00"))
+  ;; update your packages with=M-x auto-package-update-now= to update right now.
 #+end_src
 
 * General Emacs
@@ -153,14 +142,13 @@ Set transparency
 **** Fast Scroll
 To ensure scrolling is fast in Emacs, disable  non-essential things while the window is being scrolled:
 #+begin_src emacs-lisp
-(use-package fast-scroll
-  :ensure t
-  :demand t
-  :config
-  (add-hook 'fast-scroll-start-hook (lambda () (flycheck-mode -1)))
-  (add-hook 'fast-scroll-end-hook (lambda () (flycheck-mode 1)))
-  (fast-scroll-config)
-  (fast-scroll-mode 1))
+  (use-package fast-scroll
+    :defer 2
+    :config
+    (add-hook 'fast-scroll-start-hook (lambda () (flycheck-mode -1)))
+    (add-hook 'fast-scroll-end-hook (lambda () (flycheck-mode 1)))
+    (fast-scroll-config)
+    (fast-scroll-mode 1))
 #+end_src
 
 *** Undo-tree
@@ -170,6 +158,7 @@ To ensure scrolling is fast in Emacs, disable  non-essential things while the wi
       Archive: elpa
 #+begin_src emacs-lisp
   (use-package undo-tree
+    :defer 2
     :config
     (global-undo-tree-mode 1)
     (setq undo-tree-auto-save-history nil)) ;; don't save ~undo-tree~ file
@@ -180,15 +169,16 @@ To ensure scrolling is fast in Emacs, disable  non-essential things while the wi
 #+begin_src emacs-lisp
   ;;;; Modeline ;;;;
   (use-package all-the-icons
-  :init
-  (when (and (not (member "all-the-icons" (font-family-list))) ;; autoinstall fonts
-             (window-system))
-    (all-the-icons-install-fonts t)))
+    :defer 1
+    :init
+    (when (and (not (member "all-the-icons" (font-family-list))) ;; autoinstall fonts
+	       (window-system))
+      (all-the-icons-install-fonts t)))
 
   (use-package doom-modeline
     :init (doom-modeline-mode 1)
     :custom ((doom-modeline-height 10)
-             (doom-modeline-vcs-max-length 20))) ;; default is 12
+	     (doom-modeline-vcs-max-length 20))) ;; default is 12
 #+end_src
 
 *** Auto-clean white space
@@ -196,7 +186,7 @@ Archive: melpa
 #+begin_src emacs-lisp
   ;;;; Cleanup whitespace ;;;;
   (use-package ws-butler
-      :defer t
+      :defer 4
       :hook ((text-mode . ws-butler-mode)
              (prog-mode . ws-butler-mode)))
 #+end_src
@@ -375,7 +365,8 @@ Check with other environments to settle on "C-;" or "M-;" -- the other us used f
 Ivy displays vertical completions of input buffer.
 #+begin_src emacs-lisp
   (use-package ivy
-    :delight ivy-mode
+    :after counsel
+    :defer t
     :config
     (ivy-mode 1)
     ;; remove ^ on the inputbuffer
@@ -411,6 +402,7 @@ Counsel displays ivy-rich info along with suggestions in input buffer.
   Archive: elpa, melpa
 #+begin_src emacs-lisp
   (use-package counsel
+    :defer t
     :bind (("M-x" . counsel-M-x)      ; displays ivy-rich info in minibuffer
            ("C-x C-f" . counsel-find-file)
            :map minibuffer-local-map
@@ -424,7 +416,8 @@ Better version of help. We remap normal help keys to Helpful's versions.
 Archive: melpa
 #+begin_src emacs-lisp
   (use-package helpful
-  :commands (helpful-callable helpful-variavle helpful-command helpful-key)
+    :defer 3
+    :commands (helpful-callable helpful-variavle helpful-command helpful-key)
     :custom
     (counsel-describe-function-function #'helpful-callable)
     (counsel-describe-variable-function #'helpful-variable)
@@ -439,7 +432,7 @@ Archive: melpa
 Archive: elpa, melpa
 #+begin_src emacs-lisp
   (use-package which-key
-    :defer 0
+    :defer 1
     :delight which-key-mode
     :config(which-key-mode)
     (setq which-key-idle-delay 0.8))
@@ -523,7 +516,6 @@ Guess the indentation offset and 'indent-tabs-mode' from the file using internal
   (add-hook 'prog-mode-hook #'hs-minor-mode) ;; hide show, use C-c @ prefix
 #+end_src
 
-
 ** Parens/delimiters
 #+begin_src emacs-lisp
 (show-paren-mode    1) ; Highlight parentheses pairs.
@@ -534,6 +526,7 @@ Need to test the org-mode hook
 Archive: melpa
 #+begin_src emacs-lisp
   (use-package rainbow-delimiters
+    :defer t
     ;; :hook ((prog-mode . rainbow-delimiters-mode)
     ;; 	 (org-mode (lambda () (rainbow-delimiters-mode 0))))
     )
@@ -593,15 +586,15 @@ Issue: company mode not working in org-mode. Correct completion keys are not cle
 *** company-box-mode
 Brings up a another box with information about the highlighted recommended item in the company/lsp box.
 #+begin_src emacs-lisp
-   (use-package company-box
-     :hook (company-mode . company-box-mode))
+  (use-package company-box
+    :after company
+    :hook (company-mode . company-box-mode))
 #+end_src
 
 *** company-prescient
 Help in sorting the completion results.
 #+begin_src emacs-lisp
 (use-package company-prescient
-  :defer 2
   :after company
   :config
   (company-prescient-mode +1))
@@ -786,6 +779,7 @@ Archive: melpa
 Archive: melpa
 #+begin_src emacs-lisp
   (use-package ripgrep
+    :defer 2
     :ensure-system-package
     ((rg . "sudo dnf install -y ripgrep")))
 #+end_src
@@ -793,13 +787,15 @@ Archive: melpa
 ** YAML
 Archive: melpa
 #+begin_src emacs-lisp
-(use-package yaml-mode)
+  (use-package yaml-mode
+    :defer t)
 #+end_src
 
 ** Docker
 Archive: melpa
 #+begin_src emacs-lisp
-(use-package dockerfile-mode)
+  (use-package dockerfile-mode
+    :defer t)
 #+end_src
 
 ** TODO Compilation mode in async output
@@ -827,15 +823,16 @@ Use =C-c '= to view elisp babel blocks in their own file (to get completion).
 #+begin_src emacs-lisp
   (defun my-sh-mode-hook-fn()
     (setq sh-basic-offset 2
-          sh-indentation 2)) ;; defaults is 4
+	  sh-indentation 2)) ;; defaults is 4
   (add-hook 'sh-mode-hook #'my-sh-mode-hook-fn)
 
   (use-package sh-script
+    :defer t
     :ensure-system-package
     ((bash-language-server . "sudo dnf install -y nodejs-bash-language-server"))
     :config
     (setq sh-basic-offset 2
-          sh-indentation 2)) ;; defaults are 4
+	  sh-indentation 2)) ;; defaults are 4
 #+end_src
 
 **** HOLD May need to attach shellcheck with flymake
@@ -977,8 +974,9 @@ The following keeps the compilation buffer if there are warnings or errors, and 
 Hook doesn't look right, but I am guessing I tested it when added
 #+begin_src emacs-lisp
   (use-package markdown-mode
+    :defer t
     :hook (markdown-mode-hook . (lambda ()
-                                  (flyspell-mode))))
+				  (flyspell-mode))))
 #+end_src
 
 * Org-Mode
@@ -998,26 +996,31 @@ Hook doesn't look right, but I am guessing I tested it when added
 ** Fonts
 #+begin_src emacs-lisp
   (defun jmn/org-font-setup ()
-    ;; Replace list hyphen with dot
-    (font-lock-add-keywords 'org-mode
-                            '(("^ *\\([-]\\) "
-                               (0 (prog1 () (compose-region (match-beginning 1)
-                                                            (match-end 1) "•"))))))
+    (unless jmn-term ;; Replace list hyphen with dot
+      (font-lock-add-keywords
+       'org-mode '(("^ *\\([-]\\) "
+                    (0 (prog1 () (compose-region (match-beginning 1)
+                                                 (match-end 1) "•")))))))
+
     ;; Set faces for heading levels
-    (dolist (face '((org-level-1 . 1.2)
-                    (org-level-2 . 1.1)
-                    (org-level-3 . 1.1)
-                    (org-level-4 . 1.1)
-                    (org-level-5 . 1.1)
-                    (org-level-6 . 1.1)
-                    (org-level-7 . 1.1)
-                    (org-level-8 . 1.1)
-                    ))
-      (set-face-attribute (car face) nil :font "Cantarell"
-                          :weight 'regular :height (cdr face)))
+    (let ((jmn-org-hfont-alist '((gnu/linux . "Cantarell")
+                                (windows-nt . unspecified))))
+      (dolist (face '((org-level-1 . 1.2)
+                      (org-level-2 . 1.1)
+                      (org-level-3 . 1.1)
+                      (org-level-4 . 1.1)
+                      (org-level-5 . 1.1)
+                      (org-level-6 . 1.1)
+                      (org-level-7 . 1.1)
+                      (org-level-8 . 1.1)
+                      ))
+        (set-face-attribute (car face) nil
+                            :font (alist-get system-type jmn-org-hfont-alist)
+                            :weight 'regular :height (cdr face))))
 
     ;; Ensure that anything that should be fixed-pitch in Org files appears that way
-    (set-face-attribute 'org-block nil :foreground nil :inherit 'fixed-pitch)
+    ;; (set-face-attribute 'org-block nil :foreground nil :inherit 'fixed-pitch) ;;warning
+    (set-face-attribute 'org-block nil :foreground 'unspecified' :inherit 'fixed-pitch)
     (set-face-attribute 'org-code nil   :inherit '(shadow fixed-pitch))
     (set-face-attribute 'org-table nil   :inherit '(shadow fixed-pitch))
     (set-face-attribute 'org-verbatim nil :inherit '(shadow fixed-pitch))
@@ -1034,7 +1037,7 @@ Hook doesn't look right, but I am guessing I tested it when added
 
   (with-eval-after-load 'org
     (jmn/org-font-setup)
-    (unless jmn-term
+    (unless (or jmn-term jmn-vanilla)
       (setq org-ellipsis " ▾"))
     (setq org-hide-emphasis-markers t
 	  org-src-fontify-natively t
@@ -1146,7 +1149,8 @@ Create a function to align the size of displayed latex framents with overall org
 *** htmlize
 For syntax highlighting in export html, we want htmlize version > =1.34=
 #+begin_src emacs-lisp
-(use-package htmlize)
+  (use-package htmlize
+    :defer t)
 #+end_src
 
 *** Save to HTML on save
@@ -1206,7 +1210,7 @@ Following the tutorial [[https://emacs.cafe/emacs/orgmode/gtd/2017/06/30/orgmode
 
   ;; SOMEDAY itmes are ommitted from GTD interface on purpose
   (setq org-todo-keywords '((sequence "TODO(t)" "NEXT(n)" "HOLD(h)" "|"
-                                      "DONE(d)" "IGNORE(i)")))
+				      "DONE(d)" "IGNORE(i)")))
 
   (require 'find-lisp) ;; may not be needed
   (setq org-directory "~/Documents/gtd/")
@@ -1215,69 +1219,70 @@ Following the tutorial [[https://emacs.cafe/emacs/orgmode/gtd/2017/06/30/orgmode
 
   ;; level/maxlevel = order in hierarchy
   (setq org-refile-targets
-        '(("projects.org" :maxlevel . 2)
-          ("someday.org" :maxlevel . 1)
-          ("whip.org" :level . 0)
-          ("next.org" :level . 0)))
+	'(("projects.org" :maxlevel . 2)
+	  ("someday.org" :maxlevel . 1)
+	  ("whip.org" :level . 0)
+	  ("next.org" :level . 0)))
 
   ;; https://github.com/syl20bnr/spacemacs/issues/3094
   (setq org-refile-use-outline-path 'file org-outline-path-complete-in-steps nil)
   (setq org-refile-allow-creating-parent-nodes 'confirm)
 
   (setq org-agenda-prefix-format '((agenda . " %i %-10:c%t [%e]% s ")
-                                   (todo . " %i %-10:c [%-4e] ")
-                                   (tags . " %i %-12:c")))
+				   (todo . " %i %-10:c [%-4e] ")
+				   (tags . " %i %-12:c")))
 
   (setq org-deadline-warning-days 30)
 
-  (setq org-agenda-start-with-log-mode t) ;; allows us to see closed in calendar
-  (setq org-log-done 'time) ;; creates CLOSED time tag
-  (setq org-log-into-drawer t) ;; creates a LOGBOOK drawer for notes
+  (setq org-agenda-start-with-log-mode t)  ;; allows us to see closed in calendar
+  (setq org-log-done 'time)  ;; creates CLOSED time tag
+  (setq org-log-into-drawer t)  ;; creates a LOGBOOK drawer for notes
+  (setq org-agenda-use-time-grid nil)  ;; no grid at top of agenda
 
   (setq org-agenda-custom-commands
-        '(("d" "Dashboard"
-           ((agenda ""
-                    ((org-deadline-warning-days 30)))
-            (todo "NEXT"
-                  ((org-agenda-overriding-header "Next Un-Scheduled Tasks")))
-            (todo "TODO"
-                  ((org-agenda-overriding-header "Active Un-Scheduled Tasks")))))
+	'(("d" "Dashboard"
+	   ((agenda ""
+		    ((org-deadline-warning-days 30)))
+	    (todo "NEXT"
+		  ((org-agenda-overriding-header "Next Un-Scheduled Tasks")))
+	    (todo "TODO"
+		  ((org-agenda-overriding-header "Active Un-Scheduled Tasks")))))
 
-          (" " "Agenda"
-           ((agenda ""
-                    ((org-agenda-span 'day)
-                     (org-deadline-warning-days 365)))
+	  (" " "Agenda"
+	   ((agenda ""
+		    ((org-agenda-span 'day)
+		     (org-deadline-warning-days 365)))
 
-            (todo "TODO"
-                  ((org-agenda-overriding-header "To Refile")
-                   (org-agenda-files (list (concat org-directory "inbox.org")))))
+	    (todo "TODO"
+		  ((org-agenda-overriding-header "To Refile")
+		   (org-agenda-files (list (concat org-directory "inbox.org")))))
 
-            (todo "NEXT"
-                  ((org-agenda-overriding-header "In Progress")
-                   (org-agenda-files (list (concat org-directory "projects.org")
-                                           (concat org-directory "next.org")
-                                           (concat org-directory "inbox.org")))))
+	    (todo "NEXT"
+		  ((org-agenda-overriding-header "In Progress")
+		   (org-agenda-files (list (concat org-directory "projects.org")
+					   (concat org-directory "next.org")
+					   (concat org-directory "inbox.org")))))
 
-            (todo "TODO"
-                  ((org-agenda-overriding-header "Projects")
-                   (org-agenda-files (list (concat org-directory  "projects.org")))))
+	    (todo "TODO"
+		  ((org-agenda-overriding-header "Projects")
+		   (org-agenda-files (list (concat org-directory  "projects.org")))))
 
-            (todo "TODO"
-                  ((org-agenda-overriding-header "One-off Tasks")
-                   (org-agenda-files (list (concat org-directory  "next.org"))))
-                  (org-agenda-skip-function '(org-agenda-skip-entry-if
-                                              'deadline 'scheduled)))
+	    (todo "TODO"
+		  ((org-agenda-overriding-header "One-off Tasks")
+		   (org-agenda-files (list (concat org-directory  "next.org"))))
+		  (org-agenda-skip-function '(org-agenda-skip-entry-if
+					      'deadline 'scheduled)))
 
-            (todo "HOLD"
-                      ((org-agenda-overriding-header "HOLD")
-                       (org-agenda-files (list (concat org-directory "projects.org")
-                                               (concat org-directory "next.org")
-                                               (concat org-directory "inbox.org")))))
-            ))))
+	    (todo "HOLD"
+		      ((org-agenda-overriding-header "HOLD")
+		       (org-agenda-files (list (concat org-directory "projects.org")
+					       (concat org-directory "next.org")
+					       (concat org-directory "inbox.org")))))
+	    ))))
 
   (defun jmn-someday() "Quick access to someday.org (no links in agenda)"
-         (interactive)
-         (find-file (concat org-directory "someday.org")))
+	 (interactive)
+	 (find-file (concat org-directory "someday.org")))
 
   (setq org-agenda-todo-ignore-scheduled 'all) ;; cant get it to work for deadlines
 #+end_src
@@ -1489,101 +1494,104 @@ Helpful functions
 ** Themes
 *** Gruvbox
 #+begin_src emacs-lisp
-  (use-package gruvbox-theme)
+    (use-package gruvbox-theme
+      :defer t)
 
-  (defun jmn-set-gruv-org-faces (props)
-    "Function used by all gruvbox themes for setting or faces"
+    (defun jmn-set-gruv-org-faces (props)
+      "Function used by all gruvbox themes for setting or faces"
 
-    (with-eval-after-load 'org
-      (set-face-foreground 'org-priority (face-foreground font-lock-constant-face))
-      (set-face-foreground 'org-agenda-done (alist-get 'done-color props))
-      (set-face-foreground 'org-headline-done (alist-get 'done-color props))
-      (set-face-foreground 'org-done (alist-get 'done-color props))
+      (with-eval-after-load 'org
+	(set-face-foreground 'org-priority (face-foreground font-lock-constant-face))
+	(set-face-foreground 'org-agenda-done (alist-get 'done-color props))
+	(set-face-foreground 'org-headline-done (alist-get 'done-color props))
+	(set-face-foreground 'org-done (alist-get 'done-color props))
 
-      (set-face-attribute 'org-block-begin-line nil :inherit 'font-lock-comment-face)
-      (set-face-attribute 'org-block-end-line nil :inherit 'font-lock-comment-face)
-      (set-face-background 'org-block-begin-line (face-background `default))
-      (set-face-background 'org-block-end-line (face-background `default))
+	(set-face-attribute 'org-block-begin-line nil :inherit 'font-lock-comment-face)
+	(set-face-attribute 'org-block-end-line nil :inherit 'font-lock-comment-face)
+	(set-face-background 'org-block-begin-line (face-background `default))
+	(set-face-background 'org-block-end-line (face-background `default))
 
-      (setq org-todo-keyword-faces
-            `(("NEXT" . ,(face-foreground font-lock-function-name-face))
-              ("HOLD" . ,(face-foreground font-lock-builtin-face))
-              ("DONE" . ,(alist-get 'done-color props))))
+	(setq org-todo-keyword-faces
+	      `(("NEXT" . ,(face-foreground font-lock-function-name-face))
+		("HOLD" . ,(face-foreground font-lock-builtin-face))
+		("DONE" . ,(alist-get 'done-color props))))
 
-      (if (alist-get 'org-block props)
-          (set-face-background 'org-block (alist-get 'org-block props)))))
-
-
-  (defun jmn-load-gruvbox-dark-medium ()
-    "Theme for dark time"
-    (interactive)
-    (disable-theme (car custom-enabled-themes))
-    (load-theme 'gruvbox-dark-medium t)
-    (set-face-background 'line-number
-                         (face-attribute 'default :background))
-
-    ;; (set-face-foreground 'default "gray75") ;; default "#ebdbb2"
-    (set-face-foreground 'default "moccasin") ;; default "#ebdbb2"
-    (set-face-foreground 'font-lock-comment-face  "#98be65") ;; default "#ebdbb2"
-    (jmn-set-gruv-org-faces '((done-color . "gray35" ))))
+	(if (alist-get 'org-block props)
+	    (set-face-background 'org-block (alist-get 'org-block props)))))
 
 
-  (defun jmn-load-gruvbox-dark-hard ()
-    "Theme for very dark time"
-    (interactive)
-    (disable-theme (car custom-enabled-themes))
-    (load-theme 'gruvbox-dark-hard t)
+    (defun jmn-load-gruvbox-dark-medium ()
+      "Theme for dark time"
+      (interactive)
+      (disable-theme (car custom-enabled-themes))
+      (load-theme 'gruvbox-dark-medium t)
+      (set-face-background 'line-number
+			   (face-attribute 'default :background))
 
-    (set-face-foreground 'default "bisque2") ;; default "#ebdbb2"
+      ;; (set-face-foreground 'default "gray75") ;; default "#ebdbb2"
+      (set-face-foreground 'default "moccasin") ;; default "#ebdbb2"
+      (set-face-foreground 'font-lock-comment-face  "#98be65") ;; default "#ebdbb2"
+      (jmn-set-gruv-org-faces '((done-color . "gray35" ))))
 
-    (set-face-background 'mode-line-inactive "gray22")
-    (set-face-background 'mode-line-active   "gray35")
 
-    (set-face-background 'line-number
-                         (face-attribute 'default :background))
-    (set-face-background 'fringe
-                         (face-attribute 'default :background))
+    (defun jmn-load-gruvbox-dark-hard ()
+      "Theme for very dark time"
+      (interactive)
+      (disable-theme (car custom-enabled-themes))
+      (load-theme 'gruvbox-dark-hard t)
 
-    (set-face-foreground 'font-lock-comment-face  "#98be65") ;; default "#ebdbb2"
-    (set-face-foreground 'font-lock-string-face  "LightGoldenrod3")
-    (set-face-foreground 'font-lock-builtin-face  "Orange3")
-    (jmn-set-gruv-org-faces '((done-color . "gray35" )
-                              (org-block-begin-line . "gray14")
-                              (org-block-end-line . "gray14")
-                              (org-block . "gray7"))))
+      (set-face-foreground 'default "bisque2") ;; default "#ebdbb2"
 
-  (defun jmn-load-gruvbox-light-medium()
-    "Theme for light time"
-    (interactive)
-    (disable-theme (car custom-enabled-themes))
-    (load-theme 'gruvbox-light-medium t)
+      (set-face-background 'mode-line-inactive "gray22")
+      (set-face-background 'mode-line-active   "gray35")
 
-    (jmn-set-gruv-org-faces '((done-color . "Navajowhite3" ))))
+      (set-face-background 'line-number
+			   (face-attribute 'default :background))
+      (set-face-background 'fringe
+			   (face-attribute 'default :background))
 
-  (defun jmn-load-gruvbox-light-hard()
-    "Theme for very light time"
-    (interactive)
-    (disable-theme (car custom-enabled-themes))
-    (load-theme 'gruvbox-light-hard t)
+      (set-face-foreground 'font-lock-comment-face  "#98be65") ;; default "#ebdbb2"
+      (set-face-foreground 'font-lock-string-face  "LightGoldenrod3")
+      (set-face-foreground 'font-lock-builtin-face  "Orange3")
+      (jmn-set-gruv-org-faces '((done-color . "gray35" )
+				(org-block-begin-line . "gray14")
+				(org-block-end-line . "gray14")
+				(org-block . "gray7"))))
 
-    (jmn-set-gruv-org-faces '((done-color . "Navajowhite3" )
-                              (org-block . "#fbf1c7")))) ;; default "#f9f5d7"
+    (defun jmn-load-gruvbox-light-medium()
+      "Theme for light time"
+      (interactive)
+      (disable-theme (car custom-enabled-themes))
+      (load-theme 'gruvbox-light-medium t)
 
-    (defun jmn-load-gruvbox-light-soft()
-    "Theme for very light time"
-    (interactive)
-    (disable-theme (car custom-enabled-themes))
-    (load-theme 'gruvbox-light-soft t)
+      (jmn-set-gruv-org-faces '((done-color . "Navajowhite3" ))))
 
-    (jmn-set-gruv-org-faces '((done-color . "Navajowhite3" )
-                              (org-block . "#ebdbb2")))) ;; default "#f9f5d7"
+    (defun jmn-load-gruvbox-light-hard()
+      "Theme for very light time"
+      (interactive)
+      (disable-theme (car custom-enabled-themes))
+      (load-theme 'gruvbox-light-hard t)
+
+      (jmn-set-gruv-org-faces '((done-color . "Navajowhite3" )
+				(org-block . "#fbf1c7")))) ;; default "#f9f5d7"
+
+      (defun jmn-load-gruvbox-light-soft()
+      "Theme for very light time"
+      (interactive)
+      (disable-theme (car custom-enabled-themes))
+      (load-theme 'gruvbox-light-soft t)
+
+      (jmn-set-gruv-org-faces '((done-color . "Navajowhite3" )
+				(org-block . "#ebdbb2")))) ;; default "#f9f5d7"
 
 #+end_src
 
-*** Dark+
+*** Dark+ (not used)
 - The modeline, when un-selected, has the same background as files, making it hard to delineation between vertically split windows.
 #+begin_src emacs-lisp :tangle no
-  (use-package doom-themes)
+  (use-package doom-themes
+    :defer t
+    )
 
   (defun jmn-load-dark+()
     "Theme for very light time"
@@ -1591,24 +1599,26 @@ Helpful functions
     (disable-theme (car custom-enabled-themes))
     (load-theme 'doom-dark+ t)
     (set-face-background 'line-number
-                         (face-attribute 'default :background))
+			 (face-attribute 'default :background))
     ;; default does not change filename settings when modified
     (set-face-foreground 'doom-modeline-buffer-modified "red"))
 #+end_src
 
-*** Doom-one
+*** Doom-one (not used)
 #+begin_src emacs-lisp :tangle no
-  (use-package doom-themes)
+  (use-package doom-themes:
+    :defer t)
+
   (defun jmn-load-doom-one()
       "doom-one for dark time"
       (interactive)
       (disable-theme (car custom-enabled-themes))
       (load-theme 'doom-one)
       (with-eval-after-load 'org
-        (set-face-foreground 'org-priority (face-foreground font-lock-builtin-face))
-        (setq org-todo-keyword-faces
-              `(("NEXT" .  ,(face-foreground font-lock-type-face))
-                ("HOLD" . ,(face-foreground font-lock-variable-name-face))))))
+	(set-face-foreground 'org-priority (face-foreground font-lock-builtin-face))
+	(setq org-todo-keyword-faces
+	      `(("NEXT" .  ,(face-foreground font-lock-type-face))
+		("HOLD" . ,(face-foreground font-lock-variable-name-face))))))
 
 
     (defun jmn-load-doom-one-light()
@@ -1617,16 +1627,16 @@ Helpful functions
       (disable-theme (car custom-enabled-themes))
       (load-theme 'doom-one-light)
       (with-eval-after-load 'org
-        (setq org-todo-keyword-faces
-              `(("NEXT" .  ,(face-foreground font-lock-type-face))
-                ("HOLD" . ,(face-foreground font-lock-variable-name-face))))))
+	(setq org-todo-keyword-faces
+	      `(("NEXT" .  ,(face-foreground font-lock-type-face))
+		("HOLD" . ,(face-foreground font-lock-variable-name-face))))))
 #+end_src
 
 ** Default and time switches
 #+begin_src emacs-lisp
   (if (not jmn-vanilla)
       (progn
-        (jmn-load-gruvbox-dark-hard) ;; gruvbox goat
+        (jmn-load-gruvbox-dark-hard)
         ;; (jmn-load-gruvbox-light-medium)
         ;; (transparency 96)
         )
@@ -1636,14 +1646,32 @@ Helpful functions
 
 #+end_src
 
-* Hacky Fixes
-** removes following error: File mode specification error: (error Invalid image type ‘svg’)
+* Windows Core setup
+Major changes for windows. Small changes also exist in the rest of the config.
 #+begin_src emacs-lisp
+  (cond
+   ((eq system-type 'windows-nt)
+    ;;set font
+    (when (member "Consolas" (font-family-list))
+      (set-frame-font "Consolas" t t))
+    ;; set shell --also gives emacs access to gnu coreutils (diff, ls, etc.)
+    (add-hook 'shell-mode-hook 'ansi-color-for-comint-mode-on)
+    (add-hook 'term-mode-hook 'ansi-color-for-comint-mode-on)
+    (setq explicit-shell-file-name "c:/Program Files/Git/bin/bash.exe")
+    (setq shell-file-name explicit-shell-file-name)
+    (add-to-list 'exec-path "c:/Program Files/Git/bin")
+    ;; likey no octave, so read only matlab files
+    (add-hook 'octave-mode-hook 'read-only-mode)))
+#+end_src
+* Hacky Fixes
+** Corrects error: File mode specification error: (error Invalid image type ‘svg’) (not used)
+#+begin_src emacs-lisp :tangle no
 (setq image-types '(svg png gif tiff jpeg xpm xbm pbm))
 #+end_src
 
-** Keep transparency when toggling to full-screen in Emacs 29+
-#+begin_src emacs-lisp
+** Keep transparency when toggling to full-screen in Emacs 29+ (not used)
+Was needed at one point-- keeping just in case it is need in the future.
+#+begin_src emacs-lisp :tangle no
   (if (version<= "29" emacs-version)
       (progn
         (defun toggle-full-screen-with-transparency ()
@@ -1662,13 +1690,9 @@ Helpful functions
 ** Transparency in term (=emacs -nw=)
 source: https://github.com/syl20bnr/spacemacs/issues/7262
 #+begin_src emacs-lisp
-  (defun on-after-init ()
-    (if jmn-term
-      (set-face-background 'default "unspecified-bg" (selected-frame)))
-    (set-face-background 'line-number
-                         (face-attribute 'default :background)))
-
-  (add-hook 'window-setup-hook 'on-after-init)
+  (if jmn-term
+      (add-hook 'window-setup-hook
+		(lambda ()(set-face-background 'default "unspecified-bg" (selected-frame)))))
 #+end_src
 
 ** TODO Emacs 30 get "???" instead of inbox in agenda
