better ls in windows

--- a/emacs.org
+++ b/emacs.org
@@ -288,7 +288,7 @@ More to do at [[https://youtu.be/PMWwM8QJAtU][here]]: dired-open
 - M-x du  shows the size of the files in the buffer (toggle for human readable)
 #+begin_src emacs-lisp
   ;;;; Dired ;;;;
-  (add-hook 'dired-mode-mode 'dired-hide-details-mode) ;; '(' to toggle details
+  (add-hook 'dired-mode-mode 'dired-hide-details-mode) ;; hide default -- '(' to toggle
   (with-eval-after-load 'dired
     (setq dired-listing-switches "-agho --group-directories-first" )
     (setq find-ls-option '("-print0 | xargs -0 ls -agho" . ""))
@@ -1654,14 +1654,21 @@ Major changes for windows. Small changes also exist in the rest of the config.
     ;;set font
     (when (member "Consolas" (font-family-list))
       (set-frame-font "Consolas" t t))
+
     ;; set shell --also gives emacs access to gnu coreutils (diff, ls, etc.)
     (add-hook 'shell-mode-hook 'ansi-color-for-comint-mode-on)
     (add-hook 'term-mode-hook 'ansi-color-for-comint-mode-on)
     (setq explicit-shell-file-name "c:/Program Files/Git/bin/bash.exe")
     (setq shell-file-name explicit-shell-file-name)
     (add-to-list 'exec-path "c:/Program Files/Git/bin")
+
     ;; likey no octave, so read only matlab files
-    (add-hook 'octave-mode-hook 'read-only-mode)))
+    (add-hook 'octave-mode-hook 'read-only-mode)
+
+    ;; external ls for directories first support (dired)
+    (setq ls-lisp-use-insert-directory-program t)  ;; use external ls
+    (setq inserft-directory-program "c:/Program Files/Git/user/bin/ls.exe") ;; ls loc
+    ))
 #+end_src
 
 * Hacky Fixes
